# essence-of-live-coding-tutorial

./: .ghci  .ghcid  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  Main.hs  README.md  default.nix  essence-of-live-coding-tutorial.cabal  flake.nix  mypkgs.nix  shell.nix
