cabal-version:       >=1.10

name:                essence-of-live-coding-tutorial
version:             0.2.0.0
synopsis:            Tutorial application for the library essence-of-live-coding.
description:
  essence-of-live-coding is a general purpose and type safe live coding framework.
  .
  You can run programs in it, and edit, recompile and reload them while they're running.
  Internally, the state of the live program is automatically migrated when performing hot code swap.
  .
  The library also offers an easy to use FRP interface.
  It is parametrized by its side effects,
  separates data flow cleanly from control flow,
  and allows to develop live programs from reusable, modular components.
  There are also useful utilities for debugging and quickchecking.
  .
  This package provides an executable that serves as the scaffolding for a live coding tutorial at ICFP 2020.

homepage:            https://www.manuelbaerenz.de/#computerscience
category:            FRP, Live coding
author:              Manuel Bärenz
maintainer:          programming@manuelbaerenz.de
license:             BSD3
license-file:        LICENSE
build-type:          Simple
extra-source-files:  CHANGELOG.md
extra-doc-files:     README.md

source-repository head
  type:     git
  location: git@github.com:turion/essence-of-live-coding.git

source-repository this
  type:     git
  location: git@github.com:turion/essence-of-live-coding.git
  tag:      v0.1.0.3

executable essence-of-live-coding-tutorial
  main-is:             Main.hs
  build-depends:
      base >= 4.11 && < 5
    , gloss
    , essence-of-live-coding >= 0.2.0.0
    , essence-of-live-coding-gloss >= 0.2.0.0
  default-language:    Haskell2010
