cabal-version:       >=1.10

name:                essence-of-live-coding-tutorial
version:             0.2.3
synopsis:            Tutorial application for the library essence-of-live-coding.
description:
  essence-of-live-coding is a general purpose and type safe live coding framework.
  .
  You can run programs in it, and edit, recompile and reload them while they're running.
  Internally, the state of the live program is automatically migrated when performing hot code swap.
  .
  The library also offers an easy to use FRP interface.
  It is parametrized by its side effects,
  separates data flow cleanly from control flow,
  and allows to develop live programs from reusable, modular components.
  There are also useful utilities for debugging and quickchecking.
  .
  This package provides an executable that serves as the scaffolding for a live coding tutorial at ICFP 2020.

homepage:            https://www.manuelbaerenz.de/#computerscience
category:            FRP, Live coding
author:              Manuel Bärenz
maintainer:          programming@manuelbaerenz.de
license:             BSD3
license-file:        LICENSE
build-type:          Simple
extra-source-files:  CHANGELOG.md
extra-doc-files:     README.md

tested-with: GHC == 8.6.5, GHC == 8.8.4

flag pulse
  description: Build with pulse audio backend on linux.

source-repository head
  type:     git
  location: git@github.com:turion/essence-of-live-coding-tutorial.git

source-repository this
  type:     git
  location: git@github.com:turion/essence-of-live-coding-tutorial.git
  tag:      v0.2.3

executable essence-of-live-coding-tutorial
  main-is:             Main.hs
  build-depends:
      base >= 4.12 && < 4.14
    , gloss >= 1.13
    , vector-space >= 0.16
    , bytestring >= 0.10
    , utf8-string >= 1.0.1
    , essence-of-live-coding >= 0.2.3
    , essence-of-live-coding-gloss >= 0.2.3
    , essence-of-live-coding-warp >= 0.2.3

  if os(linux) && flag(pulse)
    build-depends:
      essence-of-live-coding-pulse >= 0.2.3

  default-language:    Haskell2010
